--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div id="random-page" class="page hidden flex-center flex-column">
-            <img src="/image/questionmark.gif">
+            <img src="./image/questionmark.gif">
             <button class="btn" onclick="goToPage('end-page')">給我一個希翁</button>
         </div>
 
