--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         </div>
 
         <div id="end-page" class="page hidden flex-center flex-column">
-            <img id="random-image" src="" alt="Random Image">
-            <div>
+            <div class="flex-center flex-column">
+                <img id="random-image" src="" alt="Random Image">
                 <button onclick="goToPage('random-page')">再抽一次</button>
                 <button id="download-image">下載圖片</button>
                 <button id="external-link">讓我來補檔!</button>
                 <button onclick="goToPage('home-page')">回去主頁</button>
             </div>
-            <div class="footer">
-                <h3>本測驗純屬娛樂，不代表V本人立場。<br>希望大家玩得開心！</h3>
+            <div>
+                <p>本測驗純屬娛樂，不代表V本人立場。希望大家玩得開心！</p>
                 <p>X: <a href="https://x.com/Yimoy2" target="_blank">@Yimoy2</a>  希翁的X: <a href="https://x.com/NKchion" target="_blank">@NKchion</a>  希翁的YT: <a href="https://www.youtube.com/@chionNK" target="_blank">希翁 / Chion Ch.</a></p>
             </div>
         </div>
