--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
         </div>
 
         <div id="end-page" class="page hidden flex-center flex-column">
-            <div class="flex-center flex-column">
+            <div class="flex-center flex-column image-container">
                 <img id="random-image" src="" alt="Random Image">
-                <button onclick="goToPage('random-page')">再抽一次</button>
-                <button id="download-image">下載圖片</button>
-                <button id="external-link">讓我來補檔!</button>
-                <button onclick="goToPage('home-page')">回去主頁</button>
             </div>
-            <div>
-                <p>本測驗純屬娛樂，不代表V本人立場。希望大家玩得開心！</p>
-                <p>X: <a href="https://x.com/Yimoy2" target="_blank">@Yimoy2</a>  希翁的X: <a href="https://x.com/NKchion" target="_blank">@NKchion</a>  希翁的YT: <a href="https://www.youtube.com/@chionNK" target="_blank">希翁 / Chion Ch.</a></p>
-            </div>
+            <button class="btn" onclick="goToPage('random-page')">再抽一次</button>
+            <button class="btn" id="download-image">下載圖片</button>
+            <button class="btn" id="external-link">我要補檔!我要補檔!</button>
+            <button class="btn" onclick="goToPage('home-page')">回去主頁</button>
+            <p>本測驗純屬娛樂，不代表V本人立場。希望大家玩得開心！</p>
+            <p>X: <a href="https://x.com/Yimoy2" target="_blank">@Yimoy2</a>  希翁的X: <a href="https://x.com/NKchion" target="_blank">@NKchion</a>  希翁的YT: <a href="https://www.youtube.com/@chionNK" target="_blank">希翁 / Chion Ch.</a></p>
         </div>
     </div>
     <script src="script.js"></script>
